--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,18 @@ services:
       bash -c "
         npm install &&
         npm run start"
+
+  react:
+    build:
+      context: ./react
+      dockerfile: ./Dockerfile.dev
+    environment:
+      NODE_ENV: development
+    volumes:
+      - ./react/:/app/
+    ports:
+      - 3000:3000
+    command: >
+      bash -c "
+        yarn install &&
+        yarn start"
